--- a/compose.yml
+++ b/compose.yml
@@ -2,14 +2,12 @@
 version: "3"
 services:
  devopsdb:
-   container_name: devopsdb
-   image: shaikmustafa/valluri:dbimage
+   image: thammisettivamsi/newrepo:dbimg
    ports:
      - "3306:3306"
 
  application:
-   image: shaikmustafa/valluri:appimage
-   container_name: containerapp
+   image: thammisettivamsi/newrepo:appimg
    ports:
      - "1234:8080"
    depends_on:
